# NcmConvert

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  ncm.rs
src/components/: AudioConverter.vue  NcmConverter.vue  Sidebar.vue
